# CursorCleaner

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASE_CHECKLIST.md  SECURITY.md
.github/workflows/: ci.yml  publish-npm.yml  release.yml
apps/cursor-cleaner/: Cargo.toml  README.md  config.example.toml
apps/cursor-cleaner/src/: app.rs  config.rs  domain.rs  error.rs  main.rs  platform.rs  preflight.rs  store.rs  view.rs
crates/tui-kit/: Cargo.toml
crates/tui-kit/src/: lib.rs  shell.rs  terminal.rs  theme.rs
docs/: WINDOWS_TESTING.md
npm/: README.md  package.json
npm/test/: cli.test.js
scripts/: windows-cursor-diagnostics.ps1
