[workspace]
members = ["apps/cursor-cleaner", "crates/tui-kit"]
resolver = "2"

[workspace.package]
version = "0.1.0-alpha.2"
edition = "2024"
license = "MIT"
repository = "https://github.com/BLUEMOON233/CursorCleaner"
homepage = "https://github.com/BLUEMOON233/CursorCleaner"

[workspace.dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
crossterm = "0.29"
ratatui = "0.30"
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "process", "rt-multi-thread", "sync", "time"] }
toml = "0.9"
